Import of BPHILLIPS/CatalystX-DebugFilter-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: CatalystX-DebugFilter
gitpan-cpan-version:      0.02
gitpan-cpan-path:         BPHILLIPS/CatalystX-DebugFilter-0.02.tar.gz
gitpan-cpan-author:       BPHILLIPS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for CatalystX-DebugFilter
 
+0.01 2010-03-30
+        * Fix some POD oddities and prereq's for unit tests
 0.01 2010-03-29
         * Initial Release
